ui fixes and disabling scroll on safari

--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -8,7 +8,7 @@
   opacity: 0;
   width: 100vw;
   background: $light-main-bg-color;
-  z-index: 10;
+  z-index: 150;
   transition: .4s linear;
   display: flex;
   flex-direction: column;
