--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -8,6 +8,7 @@ body {
   line-height: 21px;
   user-select: none;
   margin: 0;
+  width:100vw;
 }
 
 .gray {
